# bili_ticket_rush

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: api.rs  lib.rs  show_orderlist.rs  task_manager.rs  taskmanager.rs
common/: Cargo.toml
common/src/: account.rs  captcha.rs  chapcha.rs  cookie_manager.rs  gen_cp.rs  http_utils.rs  lib.rs  login.rs  machine_id.rs  push.rs  record_log.rs  show_orderlist.rs  taskmanager.rs  ticket.rs  token_manager.rs  utility.rs  utils.rs  web_ck_obfuscated.rs
crates/backend/: Cargo.toml
crates/backend/src/: api.rs  ctoken.rs  lib.rs  task_manager.rs
crates/common/: Cargo.toml
crates/common/src/: account.rs  captcha.rs  cookie_manager.rs  http_utils.rs  lib.rs  login.rs  push.rs  show_orderlist.rs  ticket.rs  utils.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: app.rs  main.rs
crates/frontend/src/ui/: error_banner.rs  fonts.rs  mod.rs  sidebar.rs
crates/frontend/src/ui/tabs/: account.rs  help.rs  home.rs  mod.rs  monitor.rs  settings.rs
crates/frontend/src/windows/: add_buyer.rs  login_selenium.rs  login_windows.rs  mod.rs  show_orderlist.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs  main_old.rs
frontend/src/ui/: error_banner.rs  fonts.rs  loading.rs  mod.rs  sidebar.rs
frontend/src/ui/tabs/: account.rs  help.rs  home.rs  mod.rs  monitor.rs  settings.rs
frontend/src/windows/: add_buyer.rs  confirm_ticket.rs  confirm_ticket2.rs  grab_ticket.rs  log_windows.rs  login_selenium.rs  login_windows.rs  mod.rs  screen_info.rs  show_orderlist.rs  show_qrcode.rs
src/: main.rs
