[workspace]
members = [
    "crates/frontend",
    "crates/backend",
    "crates/common"
]
resolver = "3"

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"