[package]
name = "bili_ticket_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", features = ["default"] }
egui = "0.31.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

# 字体依赖
egui_extras = { version = "0.23.0", features = ["all_loaders"] }

common = {path = " ../common"}
backend = {path = "../backend"}
