[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"

eframe = { version = "0.23.0", features = ["default"] }
egui = "0.31.0"

# log
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
once_cell = "1.8"

#json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"