[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", features = ["default"] }
egui = "0.31.0"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

# 字体依赖
egui_extras = { version = "0.23.0", features = ["all_loaders"] }

# 背景图片

image = "0.25.5" 

#时间
chrono = "0.4"

#日志
log = "0.4"
env_logger = "0.9"

#网络请求
reqwest = { version="0.11.22", features=["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"

common = {path = "../common"}
backend = {path = "../backend"}