[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17", features = ["v4"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version="0.12", features=["json", "blocking"]}
rand = "0.9"
base64 = "0.22"