[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui-chinese-font = "0.1"
winapi = { version = "0.3", features = ["winuser", "windef"] }
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = "0.25"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
base64 = "0.13"
qrcode = "0.14.1"
reqwest = { version="0.12", features=["json", "blocking", "cookies"]}
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
common = {path = "../common"}
backend = {path = "../backend"}